tests/baselines/reference/parserUnicode1.errors.txt
parserUnicode1.ts(6,5): error TS2552: Cannot find name '$ERROR'. Did you mean 'Error'?
parserUnicode1.ts(10,5): error TS2552: Cannot find name '$ERROR'. Did you mean 'Error'?
parserUnicode1.ts(10,60): error TS2454: Variable '\u0078x' is used before being assigned.


==== parserUnicode1.ts (3 errors) ====
    try {
      var \u0078x = 6;
    
      if (xx !== 6) {
    
        $ERROR('#6.1: var \\u0078x = 1; xx === 6. Actual: ' + (xx));
        ~~~~~~
!!! error TS2552: Cannot find name '$ERROR'. Did you mean 'Error'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Error' is declared here.
      }
    }
    catch (e) {
        $ERROR('#6.2: var \\u0078x = 1; xx === 6. Actual: ' + (xx));
        ~~~~~~
!!! error TS2552: Cannot find name '$ERROR'. Did you mean 'Error'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Error' is declared here.
                                                               ~~
!!! error TS2454: Variable '\u0078x' is used before being assigned.
    
    }